@@ -1,21 +1,21 @@
 {
-  "timestamp" : "2022-07-29T16:09:10Z",
-  "count_outdated" : 87,
-  "uniques_outdated" : 28,
-  "count" : 99,
-  "uniques" : 30,
+  "timestamp" : "2022-08-07T16:14:15Z",
+  "count_outdated" : 91,
+  "uniques_outdated" : 29,
+  "count" : 101,
+  "uniques" : 31,
   "views" : [
-    {
-      "timestamp": "2022-07-18T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 4, 4 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-27T00:00:00Z",
       "count": 8,
       "count_minmax": [ 8, 8 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-01T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
