@@ -1,15 +1,15 @@
 {
-  "count": 12,
+  "count": 10,
   "uniques": 2,
   "views": [
     {
-      "timestamp": "2022-07-18T00:00:00Z",
-      "count": 4,
+      "timestamp": "2022-07-27T00:00:00Z",
+      "count": 8,
       "uniques": 1
     },
     {
-      "timestamp": "2022-07-27T00:00:00Z",
-      "count": 8,
+      "timestamp": "2022-08-01T00:00:00Z",
+      "count": 2,
       "uniques": 1
     }
   ]
